--- a/css/styles.css
+++ b/css/styles.css
@@ -10153,3 +10153,7 @@ header.masthead h1 {
 .text-white-75 {
   color: rgba(255, 255, 255, 0.75);
 }
+
+.img-fluid {
+  border-right: 1px solid #343a40;
+}
